k8s/ewecrossbar-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crossbar
spec:
  type: ClusterIP
  ports:
    - name: crossbar-http
      port: 8082
      protocol: TCP
    - name: crossbar-mqtt
      port: 1883
      protocol: TCP
  selector:
    role: crossbar
